--- a/src/assets/css/note-detail.less
+++ b/src/assets/css/note-detail.less
@@ -4,7 +4,12 @@
   display: flex;
   flex-direction: column;
 
-
+.note-empty{
+  font-size: 50px;
+  color:#ccc;
+  text-align: center;
+  margin-top: 100px;
+}
   .note-bar {
     padding: 4px 20px;
     border-bottom: 1px solid #eee;
