--- a/src/assets/css/note-detail.less
+++ b/src/assets/css/note-detail.less
@@ -1,29 +1,37 @@
 
 .note-detail {
-  flex: 1;
+  flex:1;
   display: flex;
   flex-direction: column;
 
-.note-empty{
-  font-size: 50px;
-  color:#ccc;
-  text-align: center;
-  margin-top: 100px;
-}
+  .note-detail-tc {
+    height: 100%;
+  }
+
+  .note-empty {
+    font-size: 50px;
+    color: #ccc;
+    text-align: center;
+    margin-top: 100px;
+  }
+
   .note-bar {
     padding: 4px 20px;
     border-bottom: 1px solid #eee;
+
     &:after {
-      content:'';
+      content: '';
       display: block;
       clear: both;
     }
+
     span {
       font-size: 12px;
       color: #999;
       margin-right: 4px;
     }
-    .iconfont{
+
+    .iconfont {
       float: right;
       margin-left: 4px;
       font-size: 18px;
@@ -32,8 +40,8 @@
 
   }
 
-  .note-title{
-    input,span {
+  .note-title {
+    input, span {
       display: inline-block;
       width: 100%;
       border: none;
@@ -44,9 +52,10 @@
   }
 
   .editor {
-    flex: 1;
+    height: ~"calc(100% - 70px)"; //高度不进行计算
     position: relative;
   }
+
   textarea, .preview {
     position: absolute;
     width: 100%;
